--- a/用户界面/用户界面.md
+++ b/用户界面/用户界面.md
@@ -1,2 +1,63 @@
 啊啊啊
 
+{% simplemindmap %}
+
+```markdown
+- simplemindmap
+  - config book.json
+    - plugins
+      - others
+      - simple-mind-map
+    - pluginsConfig
+      - others
+      - simple-mind-map
+        - type
+        - preset
+        - linkShape
+        - autoFit
+        - style
+  - custom file.md
+    - markdown
+      - type
+      - preset
+      - linkShape
+      - autoFit
+      - style
+    - txtmap
+    - json
+    - mindmup
+```
+
+{% endsimplemindmap %}
+
+sssaaa
+
+{% simplemindmap %}
+
+```markdown
+- simplemindmap
+  - config book.json
+    - plugins
+      - others
+      - simple-mind-map
+    - pluginsConfig
+      - others
+      - simple-mind-map
+        - type
+        - preset
+        - linkShape
+        - autoFit
+        - style
+  - custom file.md
+    - markdown
+      - type
+      - preset
+      - linkShape
+      - autoFit
+      - style
+    - txtmap
+    - json
+    - mindmup
+```
+
+{% endsimplemindmap %}
